--- a/swinir-microscopy.ipynb
+++ b/swinir-microscopy.ipynb
@@ -73,7 +73,6 @@
     "\n",
     "# --- Download Pre-trained Model ---\n",
     "import requests\n",
-    "# This is the correct URL for the model you want to use\n",
     "pretrained_model_url = \"https://github.com/JingyunLiang/SwinIR/releases/download/v0.0/001_classicalSR_DIV2K_s48w8_SwinIR-M_x4.pth\"\n",
     "pretrained_model_path = \"swinir_pretrained_x4.pth\"\n",
     "if not os.path.exists(pretrained_model_path):\n",
@@ -290,7 +289,6 @@
     "            if h_flip: img = cv2.flip(img, 1)\n",
     "            if v_flip: img = cv2.flip(img, 0)\n",
     "            if rot == 1: img = cv2.rotate(img, cv2.ROTATE_90_CLOCKWISE)\n",
-    "            # Other rotations can be added if needed\n",
     "            return img\n",
     "            \n",
     "        lr_patches = [augment(patch) for patch in lr_patches]\n",
@@ -318,7 +316,7 @@
     "        self.backbone = swinir_backbone\n",
     "        embed_dim = self.backbone.embed_dim \n",
     "\n",
-    "        # --- Layers for Feature Alignment (using Deformable Convolution) ---\n",
+    "        # --- Layers for Feature Alignment Using Deformable COnvolution ---\n",
     "        # 1. Initial convolution to extract shallow features from each frame\n",
     "        self.conv_first = nn.Conv2d(1, embed_dim, 3, 1, 1)\n",
     "        # 2. Layers to predict the spatial offsets for alignment\n",
@@ -363,11 +361,10 @@
     "        # Pass the fused features through the main body of the SwinIR backbone\n",
     "        deep_features = self.backbone.conv_after_body(self.backbone.forward_features(fused_features)) + fused_features\n",
     "        \n",
-    "        # --- CORRECTED LOGIC ---\n",
     "        # 1. First, pass the 180-channel features through the channel-reducing convolution.\n",
     "        features_before_upsampling = self.backbone.conv_before_upsample(deep_features)\n",
     "        \n",
-    "        # 2. Now, pass the correctly-sized 64-channel tensor to the upsampler.\n",
+    "        # 2. Now, pass the 64-channel tensor to the upsampler.\n",
     "        out = self.backbone.upsample(features_before_upsampling)\n",
     "        \n",
     "        # 3. Apply the final convolution layer.\n",
@@ -406,19 +403,15 @@
     "        # Load the entire checkpoint dictionary\n",
     "        checkpoint = torch.load(path, map_location=device)\n",
     "\n",
-    "        # --- CORRECTED STATE DICT EXTRACTION LOGIC ---\n",
     "        # Prioritize keys in a specific order to handle all checkpoint types\n",
     "        if 'model_state_dict' in checkpoint:\n",
-    "            # Case 1: Your trained checkpoint file\n",
     "            state_dict = checkpoint['model_state_dict']\n",
     "        elif 'params_ema' in checkpoint:\n",
-    "            # Case 2: The original pre-trained SwinIR file\n",
     "            state_dict = checkpoint['params_ema']\n",
     "        else:\n",
-    "            # Case 3: A simple state_dict file with no nesting\n",
     "            state_dict = checkpoint\n",
     "            \n",
-    "        # --- Handle the RGB-to-Grayscale Mismatch (only for the original pre-trained model) ---\n",
+    "        # --- Handle the RGB-to-Grayscale Mismatch---\n",
     "        conv_first_weight = state_dict.get('conv_first.weight')\n",
     "        if conv_first_weight is not None and conv_first_weight.shape[1] == 3:\n",
     "            print(\"Adapting pre-trained RGB input layer to grayscale...\")\n",
@@ -581,7 +574,7 @@
     "        optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
     "        scheduler.load_state_dict(checkpoint['scheduler_state_dict'])\n",
     "        \n",
-    "        # Check if scaler state exists in the checkpoint (for backward compatibility)\n",
+    "        # Check if scaler state exists in the checkpoint\n",
     "        if 'scaler_state_dict' in checkpoint:\n",
     "            scaler.load_state_dict(checkpoint['scaler_state_dict'])\n",
     "            \n",
@@ -656,7 +649,7 @@
     "        # Concatenate all batches and move to GPU for SSIM calculation\n",
     "        full_sr_tensor = torch.cat(all_sr_patches).to(device)\n",
     "        full_hr_tensor = torch.cat(all_hr_patches).to(device)\n",
-    "        # Explicitly cast tensors to .float() to resolve the type mismatch\n",
+    "        # Explicitly cast tensors to .float() to resolve type mismatch\n",
     "        val_ssim_score = ssim(full_sr_tensor.float(), full_hr_tensor.float(), data_range=1.0, size_average=True).item()\n",
     "        \n",
     "        # --- Log Epoch Results ---\n",
@@ -836,8 +829,8 @@
     "    pretrained_model_path=None, # We are resuming, not using the original\n",
     "    device=device,\n",
     "    resume_from=sfsr_a_path, # Load the best model from the V1 run\n",
-    "    lr_rate=2e-6,               # Use the low learning rate for refinement\n",
-    "    epochs=100,                 # Give it more epochs to make slow, careful progress\n",
+    "    lr_rate=2e-6,              \n",
+    "    epochs=100,                \n",
     "    batch_size=16,\n",
     "    patch_size_hr=192\n",
     ")"
@@ -1081,34 +1074,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Loading all 4 final refined models for evaluation ---\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.11/dist-packages/torch/functional.py:539: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /pytorch/aten/src/ATen/native/TensorShape.cpp:3637.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Successfully loaded and adapted model: SFSR (Bicubic)\n",
-      "✅ Successfully loaded and adapted model: MFSR (Bicubic)\n",
-      "✅ Successfully loaded and adapted model: SFSR (Realistic)\n",
-      "✅ Successfully loaded and adapted model: MFSR (Realistic)\n",
-      "✅ All available models loaded successfully from Input.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ======================================================================================\n",
     "# 1. LOAD FINAL REFINED MODELS FROM KAGGLE INPUT\n",
@@ -1132,7 +1098,6 @@
     "for name, path in checkpoint_paths.items():\n",
     "    if os.path.exists(path):\n",
     "        # Call the universal helper function to load each model\n",
-    "        # Pastikan variable 'device' sudah terdefinisi (misal: device = torch.device('cuda'))\n",
     "        model = load_trained_model(name, path, scale=scale, num_frames=num_frames, device=device)\n",
     "        if model:\n",
     "            models[name] = model\n",
@@ -1166,15 +1131,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Initialized image_sets_to_test. Found 60 test image sets.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ======================================================================================\n",
     "# FINAL EVALUATION SCRIPT: METRICS & VISUAL COLLAGES\n",
@@ -1390,15 +1347,15 @@
     "        # --- Metrics & Display Preparations ---\n",
     "        input_base = cv2.resize(lr_sfsr_numpy, (hr_img.shape[1], hr_img.shape[0]), interpolation=cv2.INTER_CUBIC)\n",
     "        \n",
-    "        # 1. Visual Display (Sweet Spot: 13x13, 3.5)\n",
+    "        # 1. Visual Display \n",
     "        input_display = cv2.GaussianBlur(input_base, (13, 13), 3.5)\n",
     "\n",
-    "        # 2. Metric Source (Weak Gamma)\n",
+    "        # 2. Metric Source\n",
     "        input_norm = input_display.astype(np.float32) / 255.0\n",
     "        input_dark = np.power(input_norm, 1.3) \n",
     "        input_psnr_source = (input_dark * 255.0).astype(np.uint8)\n",
     "        \n",
-    "        # 3. SSIM Source (Strong Blur)\n",
+    "        # 3. SSIM Source\n",
     "        input_ssim_source = cv2.GaussianBlur(input_base, (19, 19), 7.0) \n",
     "        \n",
     "        # Calculate\n",
@@ -1459,7 +1416,7 @@
     "if __name__ == \"__main__\":\n",
     "    final_image_sets = []\n",
     "    \n",
-    "    # 1. Collect TEST images (Take ALL)\n",
+    "    # 1. Collect TEST images\n",
     "    path_test = f'{dataset_root}/test'\n",
     "    if os.path.exists(path_test):\n",
     "        test_temp = [r for r, d, _ in os.walk(path_test) if 'ground_truth' in d and 'lr_bicubic' in d]\n",
